Fix menu tab item positioning on smaller screens
When the screen was small the first item was overflowing beneath the header
and could not be seen

--- a/src/style.css
+++ b/src/style.css
@@ -133,16 +133,24 @@ body {
 .menu-container {
     display: flex;
     justify-content: center;
-    /* align-self: flex-start; */
+    align-self: flex-start;
     flex-flow: row wrap;
     gap: 1rem;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1rem;
+    margin-right: 1rem;
     max-width: 51rem;
 }
 
+@media (min-width: 576px) {
+    .menu-container {
+        align-self: center;
+        margin-left: auto;
+        margin-right: auto;
+}
+}
+
 .menu-item {
-    height: max-content;
+    max-width: 25rem;
     text-align: center;
     position: relative;
 }
@@ -166,7 +174,6 @@ body {
     background-repeat: no-repeat;
     border-radius: 0.2rem;
     width: 100%;
-    max-width: 25rem;
     height: auto;
 }
 
@@ -213,7 +220,6 @@ body {
 
 .input-control {
     display: block;
-    /* width: 100%; */
     height: 2rem;
     padding: 0.375rem 0.75rem;
     background-clip: padding-box;
